--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,35 +1,8 @@
-<p id="notice"><%= notice %></p>
+<h2>Games</h2>
 
-<h1>Games</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Genre</th>
-      <th>Developer</th>
-      <th>Release date</th>
-      <th>Img url</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @games.each do |game| %>
-      <tr>
-        <td><%= game.title %></td>
-        <td><%= game.genre %></td>
-        <td><%= game.developer %></td>
-        <td><%= game.release_date %></td>
-        <td><%= game.img_url %></td>
-        <td><%= link_to 'Show', game %></td>
-        <td><%= link_to 'Edit', edit_game_path(game) %></td>
-        <td><%= link_to 'Destroy', game, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Game', new_game_path %>
+<div class="games">
+  <% @games.each do |game| %>
+    <div class="game">
+      <%= link_to %>
+    </div>
+</div>
