--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -3,6 +3,9 @@
 <div class="games">
   <% @games.each do |game| %>
     <div class="game">
-      <%= link_to %>
+      <%= link_to game, class: "poster" do %>
+        <%= image_tag game.img_url %>
+      <% end %>
     </div>
+  <% end %>
 </div>
