--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,14 @@
   <body>
     <h1>GamrBuddy</h1>
     <nav>
-      <a href="/games">Songs</a>
-      <div>
+      <%= link_to "Games", games_path %>
+
+      <% if user_signed_in? %>
+        <%= link_to "My Library", ownerships_user_path(current_user) %>
+      <% end %>
+
+
+      <div class="user-info">
         <% if user_signed_in? %>
           Welcome, <strong><%= current_user.email %></strong>!
           <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
