--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the Games controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.games-grid {
+  display: flex;
+  flex-flow: row wrap;
+
+  .game {
+    width: 240px;
+    margin: auto;
+      .poster img {
+      height: 325px;
+      width: 100%;}
+}}
