--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,6 +1,6 @@
 <h2>Games</h2>
 
-<div class="games">
+<div class="games-grid">
   <% @games.each do |game| %>
     <div class="game">
       <%= link_to game, class: "poster" do %>
