--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -7,9 +7,9 @@
     <p><%= @game.developer %></p>
     <p><%= @game.genre %></p>
     <% if @game.users.include? current_user %>
-        <%= link_to "Remove Game".html_safe, remove_ownership_game_path(@game), method: :delete, class: "fav" %>
+        <%= link_to " Game".html_safe, remove_ownership_game_path(@game), method: :delete, class: "fav fi-minus" %>
       <% else %>
-        <%= link_to "Add Game".html_safe, add_ownership_game_path(@game), method: :post, class: "no-fav" %>
+        <%= link_to " Game".html_safe, add_ownership_game_path(@game), method: :post, class: "no-fav fi-plus" %>
       <% end %>
   </div>
 
