--- a/app/views/users/ownerships.html.erb
+++ b/app/views/users/ownerships.html.erb
@@ -1,5 +1,5 @@
 <h1>Library</h1>
-<div class="games">
+<div class="games-grid">
   <% @ownerships.each do |ownership| %>
     <div class="game">
       <%= link_to ownership.game, class: "poster" do %>
