--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,6 @@
  *= require_tree .
  *= require_self
  */
+ 
+ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
+ .w3-sidenav a,.w3-sidenav h4 {font-weight:bold}
