--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,25 +1,26 @@
 
-<!-- Sidenav/menu -->
 <nav class="w3-sidenav w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidenav"><br>
-  <div class="w3-container">
-    <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding" title="close menu">
-      <i class="fa fa-remove"></i>
-    </a>
-    <img src="/w3images/avatar_g2.jpg" style="width:45%;" class="w3-round"><br><br>
-    <h4 class="w3-padding-0"><b><%= current_user.email %></b></h4>
-    <p class="w3-text-grey">Desc</p>
-  </div>
+  <% if user_signed_in? %>
+    <div class="w3-container">
 
-  <%= link_to ownerships_user_path(current_user), class: "w3-padding", onclick: "w3_close()" do %>
-    <i class="fa fa-th-large fa-fw w3-margin-right"></i>LIBRARY
-  <% end %>
-  <%= link_to edit_user_registration_path, class: "w3-padding", onclick: "w3_close()" do %>
-    <i class="fa fa-user fa-fw w3-margin-right"></i>EDIT PROFILE
-  <% end %>
-  <%= link_to destroy_user_session_path, class: "w3-padding" do %>
-    <i class="fa fi-power fa-fw w3-margin-right"></i>LOGOUT
-  <% end %>
+      <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding" title="close menu">
+        <i class="fa fa-remove"></i>
+      </a>
+      <img src="/w3images/avatar_g2.jpg" style="width:45%;" class="w3-round"><br><br>
+      <h4 class="w3-padding-0"><b><%= current_user.email %></b></h4>
+      <p class="w3-text-grey">Desc</p>
+    </div>
 
+    <%= link_to ownerships_user_path(current_user), class: "w3-padding", onclick: "w3_close()" do %>
+      <i class="fa fa-th-large fa-fw w3-margin-right"></i>LIBRARY
+    <% end %>
+    <%= link_to edit_user_registration_path, class: "w3-padding", onclick: "w3_close()" do %>
+      <i class="fa fa-user fa-fw w3-margin-right"></i>EDIT PROFILE
+    <% end %>
+    <%= link_to destroy_user_session_path, method: :delete, class: "w3-padding" do %>
+      <i class="fa fi-power fa-fw w3-margin-right"></i>LOGOUT
+    <% end %>
+  <% end %>
 </nav>
 
 <!-- Overlay effect when opening sidenav on small screens -->
