--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -2,15 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-
-.games-grid {
-  display: flex;
-  flex-flow: row wrap;
-
-  .game {
-    width: 240px;
-    margin: auto;
-      .poster img {
-      height: 325px;
-      width: 100%;}
-}}
+.game {
+  width: 100%;
+  height: 325px;
+}
