--- a/app/views/users/ownerships.html.erb
+++ b/app/views/users/ownerships.html.erb
@@ -8,4 +8,12 @@
       <% end %>
     </div>
   <% end %>
+
+  <!-- Pagination -->
+  <div class="w3-center w3-padding-32">
+    <div class="w3-pagination">
+      <%= will_paginate @ownerships, :container => false %>
+    </div>
+  </div>
+
 </div>
