Update layout for all forms

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -3,7 +3,7 @@
   <% @games.each do |game| %>
     <div class="w3-third w3-container w3-margin-bottom">
       <%= link_to game do %>
-        <%= image_tag game.img_url, class: "w3-hover-opacity game" %>
+        <%= image_tag game.img_url, class: "w3-hover-opacity game w3-card-8" %>
       <% end %>
     </div>
   <% end %>
