--- a/app/views/users/ownerships.html.erb
+++ b/app/views/users/ownerships.html.erb
@@ -4,7 +4,7 @@
   <% @ownerships.each do |ownership| %>
     <div class="w3-third w3-container w3-margin-bottom">
       <%= link_to ownership.game do %>
-        <%= image_tag ownership.game.img_url, class: "w3-hover-opacity game" %>
+        <%= image_tag ownership.game.img_url, class: "w3-hover-opacity game w3-card-8" %>
       <% end %>
     </div>
   <% end %>
