--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,44 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="w3-row-padding">
+  <div class="w3-half">
+    <p><%= link_to "Back", :back, class: "w3-btn" %></p>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: "w3-container w3-card-4 w3-white" }) do |f| %>
+      <h2>Edit <%= resource_name.to_s.humanize %></h2>
+      <%= devise_error_messages! %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+      <div class="w3-group">
+        <%= f.email_field :email, autofocus: true, class: "w3-input" %>
+        <%= f.label :email, class: "w3-label w3-validate" %>
+      </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+      <% end %>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+      <div class="w3-group">
+        <%= f.password_field :password, autocomplete: "off", class: "w3-input" %>
+        <%= f.label :password, class: "w3-label w3-validate"  %> <i>(leave blank if you don't want to change it)</i>
+        <% if @minimum_password_length %>
+          <br />
+          <em><%= @minimum_password_length %> characters minimum</em>
+        <% end %>
+      </div>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+      <div class="w3-group">
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: "w3-input" %>
+        <%= f.label :password_confirmation, class: "w3-label w3-validate"  %>
+      </div>
+
+      <div class="w3-group">
+        <%= f.password_field :current_password, autocomplete: "off", class: "w3-input" %>
+        <%= f.label :current_password, class: "w3-label w3-validate"  %> <i>(we need your current password to confirm your changes)</i>
+      </div>
+
+      <div class="actions">
+        <%= f.submit "Update", class: "w3-btn w3-right"  %> <br />
+      </div>
     <% end %>
+
+    <p>Unhappy? Cancel Account<%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "w3-btn"  %></p>
+
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
