--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,31 @@
-<h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+<div class="w3-row-padding">
+  <div class="w3-half">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html => { class: "w3-container w3-card-4 w3-white" }) do |f| %>
+      <h2>Sign up</h2>
+      <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+      <div class="w3-group">
+        <%= f.email_field :email, autofocus: true, class: "w3-input" %>
+        <%= f.label :email, class: "w3-label w3-validate" %>
+      </div>
+
+      <div class="w3-group">
+        <%= f.password_field :password, autocomplete: "off", class: "w3-input"  %>
+        <%= f.label :password, class: "w3-label w3-validate" %>
+        <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %>
+      </div>
+
+      <div class="w3-group">
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: "w3-input"  %>
+        <%= f.label :password_confirmation, class: "w3-label w3-validate" %>
+      </div>
+
+      <div class="actions">
+        <%= f.submit "Sign up", class: "w3-btn w3-right" %><br />
+      </div>
+    <% end %>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div><br>
