Fix yield display for not signed in user

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -6,10 +6,13 @@
     <% if !user_signed_in? %>
       <%= link_to new_user_registration_path do %>
         <i class="fa fi-pencil fa-fw w3-margin-right"></i>SIGN UP
-      <% end %><br>
+      <% end %>
       <%= link_to new_user_session_path do %>
         <i class="fa fi-power fa-fw w3-margin-right"></i>LOGIN
-      <% end %>
+      <% end %><br>
+      <h4>Ever login into your Ps4 and have no one to play with? Well you've come to the right
+        place. GamrBuddy is the ultimate place to find other gamers who have the same games as you.
+        Sign up and create your game library now.</h4>
     <% end %>
   </div>
   <!-- Signed in -->
