Fix yield, remove condition and add to gam view index

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 
 <header class="w3-container" id="portfolio">
-  <a href="#"><img src="/w3images/avatar_g2.jpg" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity"></a>
+  <a href="#"><img src="/assets/img-placeholder.png" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity"></a>
   <span class="w3-opennav w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
   <h1><b><i class="fi-torsos-all"></i> GamrBuddy</b></h1>
   <div class="w3-section w3-bottombar w3-padding-16">
