--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
       <%= render "layouts/alerts" %>
 
       <!-- Yield Content -->
-      <%= render "layouts/yield" %>
+      <%= yield %>
       <!-- Footer -->
       <%= render "layouts/footer" %>
     </div>
