--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,18 +1,23 @@
 <!-- Game Grid-->
 <div class="w3-row-padding">
-  <% @games.each do |game| %>
-    <div class="w3-third w3-container w3-margin-bottom">
-      <%= link_to game do %>
-        <%= image_tag game.img_url, class: "w3-hover-opacity game w3-card-8" %>
-      <% end %>
+  <% if @games.present?%>
+    <% @games.each do |game| %>
+      <div class="w3-third w3-container w3-margin-bottom">
+        <%= link_to game do %>
+          <%= image_tag game.img_url, class: "w3-hover-opacity game w3-card-8" %>
+        <% end %>
+      </div>
+    <% end %>
+
+    <!-- Pagination -->
+    <div class="w3-center w3-padding-32">
+      <div class="w3-pagination">
+        <%= will_paginate @games, :container => false %>
+      </div>
+    </div>
+  <% else%>
+    <div class="w3-center w3-padding-32">
+      <p>There are no games containing the term(s) <%= params[:search] %>.</p>
     </div>
   <% end %>
-
-  <!-- Pagination -->
-  <div class="w3-center w3-padding-32">
-    <div class="w3-pagination">
-      <%= will_paginate @games, :container => false %>
-    </div>
-  </div>
-
 </div>
