--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,13 +1,13 @@
 
 <!-- Show Game Info-->
- <div class="w3-row-padding w3-padding-16" id="about">
+ <div class="w3-row-padding w3-padding-16">
    <div class="w3-col m6 w3-center">
      <%= image_tag @game.img_url, class: ""%>
    </div>
    <div class="w3-col m6">
      <h2><%= @game.title %>(<%= @game.release_date.strftime("%Y") %>)</h2>
-     <p><%= @game.developer %></p>
-     <p><%= @game.genre %></p>
+     <p>Developer:<%= @game.developer %></p>
+     <p>Genre:<%= @game.genre %></p>
      <% if @game.users.include? current_user %>
          <%= link_to " Game".html_safe, remove_ownership_game_path(@game), method: :delete, class: "fi-minus" %>
        <% else %>
