--- a/app/views/layouts/_alerts.html.erb
+++ b/app/views/layouts/_alerts.html.erb
@@ -1,6 +1,11 @@
-<% if notice %>
-  <p class="alert alert-success"><%= notice %></p>
-<% end %>
-<% if alert %>
-  <p class="alert alert-danger"><%= alert %></p>
-<% end %>
+
+  <% if notice %>
+    <div class="w3-center w3-padding-32">
+      <p class="alert alert-success"><%= notice %></p>
+    </div>
+  <% end %>
+  <% if alert %>
+    <div class="w3-center w3-padding-32">
+      <p class="alert alert-danger"><%= alert %></p>
+    </div>
+  <% end %>
