--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Game</h1>
+<div class="w3-row-padding" style=" width: 50%; margin: 0 auto;">
+  <div class="w3-container w3-card-4 w3-white">
+    <h1>New Game</h1>
 
-<%= render 'form', game: @game %>
-
-<%= link_to 'Back', games_path %>
+    <%= render 'form', game: @game %>
+  </div>
+</div><br>
