--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,7 @@
   <h1><b><i class="fi-torsos-all"></i> GamrBuddy</b></h1>
   <div class="w3-section w3-bottombar w3-padding-16">
     <%= link_to "Games", games_path, class: "w3-btn" %>
+    <%= link_to "(+)", new_game_path, class: "w3-btn" %>
     <%= form_tag(games_path, :method => "get", id: "search-form") do %>
       <%= text_field_tag :search, params[:search], placeholder: "Search Games" %>
       <%= submit_tag "Search", class: "w3-btn" %>
