--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -23,7 +23,7 @@
         <i class="fa fa-remove"></i>
       </a>
       <img src="/assets/img-placeholder.png" style="width:50%; height: 100px;" class="w3-round"><br><br>
-      <h4 class="w3-padding-0"><b><%= current_user.email %></b></h4>
+      <h4 class="w3-padding-0"><b><%= current_user.profile.gamertag %></b></h4>
       <p class="w3-text-grey">Desc of User</p>
     </div>
 
