--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,7 @@
 
 <div class="w3-row-padding">
   <div class="w3-half">
+    <% resource.build_profile if resource.profile.nil? %>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html => { class: "w3-container w3-card-4 w3-white" }) do |f| %>
       <h2>Sign up</h2>
       <%= devise_error_messages! %>
@@ -20,7 +21,6 @@
           <%= profile_form.text_field :desc, class: "w3-input"  %>
           <%= profile_form.label :desc, class: "w3-label w3-validate"  %>
         </div>
-
       <% end %>
 
       <div class="w3-group">
