--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,9 @@
 
 <div class="w3-row-padding">
   <div class="w3-half">
-  
+
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html => { class: "w3-container w3-card-4 w3-white" }) do |f| %>
-      <h2>Sign up</h2>
+      <h2>Register</h2>
       <%= devise_error_messages! %>
 
       <%= f.fields_for :profile do |profile_form| %>
@@ -42,8 +42,8 @@
       </div>
 
       <div class="actions">
-        <%= f.submit "Sign up", class: "w3-btn w3-right" %><br />
-      </div>
+        <%= f.submit "Register", class: "w3-btn w3-right" %>
+      </div><br>
     <% end %>
   </div>
 </div><br>
