--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,5 @@
 <div class="w3-row-padding">
   <div class="w3-half">
-    <p><%= link_to "Back", :back, class: "w3-btn" %></p>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: "w3-container w3-card-4 w3-white" }) do |f| %>
       <h2>Edit <%= resource_name.to_s.humanize %></h2>
       <%= devise_error_messages! %>
@@ -18,7 +17,6 @@
         <%= f.password_field :password, autocomplete: "off", class: "w3-input" %>
         <%= f.label :password, class: "w3-label w3-validate"  %> <i>(leave blank if you don't want to change it)</i>
         <% if @minimum_password_length %>
-          <br />
           <em><%= @minimum_password_length %> characters minimum</em>
         <% end %>
       </div>
@@ -34,8 +32,9 @@
       </div>
 
       <div class="actions">
-        <%= f.submit "Update", class: "w3-btn w3-right"  %> <br />
-      </div>
+        <%= link_to "Back", :back, class: "w3-btn" %>
+        <%= f.submit "Update", class: "w3-btn w3-right"  %>
+      </div><br />
     <% end %>
 
     <p>Unhappy? Cancel Account<%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "w3-btn"  %></p>
